@@ -1,5 +1,8 @@
 2018-12-19  Alexandre Oliva <aoliva@redhat.com>
 
+	PR c++/87012
+	* g++.dg/cpp0x/pr87012.C: New.
+
 	PR c++/88146
 	* g++.dg/cpp0x/inh-ctor32.C: New.
 
